Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/molecules/product-price.mdx
+++ b/docs/faststore/components/molecules/product-price.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Product Price"
+title: "ProductPrice"
 excerpt: ProductPrice displays the product's listing and spot price.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/product-price___90342b9516448a71008988620e629225.png
@@ -8,7 +8,7 @@ components:
   - Price.tsx
 ---
 
-The Product Price component displays product's listing and spot price.
+The `ProductPrice` component displays both the listing price and spot price of a product.
 It wraps two [Price](https://developers.vtex.com/docs/guides/faststore/atoms-price) components.
 
 ## Overview
@@ -57,7 +57,7 @@ It wraps two [Price](https://developers.vtex.com/docs/guides/faststore/atoms-pri
 
 ## Import
 
-Import the component from [@faststore/ui](/../components)
+To use the `ProductPrice` component, import it from the [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index) package.
 
 ```tsx
 import { ProductPrice } from '@faststore/ui'
@@ -65,13 +65,13 @@ import { ProductPrice } from '@faststore/ui'
 
 ### Import Styles into your FastStore project
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply the `ProductPrice` styles, add the following line to your stylesheet:
 
 ```scss
 @import "@faststore/ui/src/components/molecules/ProductPrice/styles.scss";
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For more details on importing component styles, refer to the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) guide.
 
 ---
 
@@ -81,11 +81,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   <ProductPrice value={950.04} listPrice={999} formatter={useFormattedPrice} />
 </OverviewSection>
 
-```tsx copy
+```tsx
 <ProductPrice value={950.04} listPrice={999} formatter={useFormattedPrice} />
 ```
 
-```tsx copy
+```tsx
 // Example of formatter
 interface PriceFormatterOptions {
   decimals?: boolean;
@@ -118,7 +118,7 @@ export const useFormattedPrice = (price: number) => {
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow token="--fs-product-price-gap" value="var(--fs-spacing-1)" />
@@ -126,18 +126,18 @@ export const useFormattedPrice = (price: number) => {
 
 ---
 
-## Use Cases
+## Use cases
 
 The `ProductPrice` component wraps two instances of the `Price` component, representing the prices with the spot and listing variants.
 
-- In cases where both prices are identical, only the spot price will be presented.
-- If the listing price is set to 0, only the spot price will be shown.
+- If the spot price and listing price are the same, only the spot price is shown.
+- If the listing price is set to `0`, only the spot price is shown.
 
 ---
 
 ## Customization
 
-For further customization, you can use the following data attributes:
+The `ProductPrice` component can be customized using the following data attribute:
 
 `data-fs-product-price`
 
