add ProductPrice card in the index.mdx

--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -326,6 +326,17 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
       />
     </ProductCard>
   </CardItem>
+   <CardItem
+    title="ProductPrice"
+    description="ProductPrice displays the product's listing and spot price."
+    actionPath="/components/molecules/product-price"
+  >
+    <ProductPrice
+      value={950.04}
+      listPrice={999}
+      formatter={useFormattedPrice}
+    />
+  </CardItem>
   <CardItem
     title="Product Title"
     description="Used on Product Details Page, wraps the product name, a product label and the rating."
@@ -336,17 +347,6 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
       label={<DiscountBadge size="big" listPrice={100} spotPrice={90} />}
       refNumber="99995945"
       ratingValue={4}
-    />
-  </CardItem>
-  <CardItem
-    title="Product Price"
-    description="Displays product's selling and listing prices."
-    actionPath="/components/molecules/product-price"
-  >
-    <ProductPrice
-      value={950.04}
-      listPrice={999}
-      formatter={useFormattedPrice}
     />
   </CardItem>
   <CardItem
