Apply suggestions from code review

--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -328,7 +328,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
    <CardItem
     title="ProductPrice"
-    description="ProductPrice displays the product's listing and spot price."
+    description="Displays the product's listing and spot price."
     actionPath="/components/molecules/product-price"
   >
     <ProductPrice
