--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -179,8 +179,8 @@ hideTOC: true
     </ProductCard>
   </CardItem>
   <CardItem
-    title="Product Price"
-    description="ProductPrice displays the product's listing and spot price."
+    title="ProductPrice"
+    description="Displays the product's listing and spot price."
     actionPath="/docs/guides/faststore/molecules-product-price"
   >
     <ProductPrice
