--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -55,7 +55,7 @@ To apply the styles of this component in your FastStore project, import the foll
 @import "@faststore/ui/src/components/molecules/Card/styles.scss";
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
 
 ---
 
