--- a/docs/faststore/components/organisms/region-modal.mdx
+++ b/docs/faststore/components/organisms/region-modal.mdx
@@ -7,7 +7,7 @@ components:
   - RegionModal.tsx
 ---
 
-`RegionModal` provides a modal for selecting and configuring region-specific options. It is built on top of the [Modal](https://developers.vtex.com/docs/guides/faststore/molecules-modal) component. The component is a part of the [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature.
+`RegionModal` is part of the [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature and provides a modal interface for selecting and configuring region-specific options. It extends the functionality of the [Modal](https://developers.vtex.com/docs/guides/faststore/molecules-modal) component, making it adaptable for region-related settings within your FastStore application.
 
 ## Import
 
