Fix excerpt and add the component to the molecules overview page

--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Card"
-excerpt: Display some information divided into a body and a header.
+excerpt: A card with a header and body, ideal for displaying products, messages, or store information.
 components:
   - Card.tsx
 sidebar_custom_props:
