--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -37,6 +37,19 @@ hideTOC: true
   </CardItem>
 
   <CardItem
+    title="Card"
+    description="A card with a header and body, ideal for displaying products, messages, or store information."
+    actionPath="/docs/guides/faststore/molecules-card"
+  >
+    <Card
+      iconName="PlusCircle"
+      title="Card with Icon"
+      style={{width: '300px'}}>
+      <h1> Message </h1>
+    </Card>
+  </CardItem>
+
+  <CardItem
     title="Carousel"
     description="Slides through multiple elements using custom controls."
     actionPath="/docs/guides/faststore/molecules-carousel"
