--- a/docs/faststore/components/molecules/checkbox-field.mdx
+++ b/docs/faststore/components/molecules/checkbox-field.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Checkbox Field"
-excerpt: Checkbox Field grouped a Checkbox input and its corresponding Label.
+title: "CheckboxField"
+excerpt: CheckboxField wraps a Checkbox input and its corresponding Label.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Checkbox___5dfb3d931c093ee7ebfac8bc388e68b5.png
 components:
   - CheckboxField.tsx
 ---
 
-Checkbox Field wraps a [Checkbox](https://developers.vtex.com/docs/guides/faststore/atoms-checkbox) input and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label). It allows users to select one option from a set.
+CheckboxField wraps a [Checkbox](https://developers.vtex.com/docs/guides/faststore/atoms-checkbox) input and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label). It allows users to select one option from a set.
 
 ## Overview
 
