--- a/docs/faststore/components/molecules/buy-button.mdx
+++ b/docs/faststore/components/molecules/buy-button.mdx
@@ -1,13 +1,13 @@
 ---
 title: "BuyButton"
-excerpt: BuyButton intends to send the user to the checkout/cart step directly.
+excerpt: A buy button intends to send the user to the checkout/cart step directly.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Button___6d6b16886d5d7e2a05dba8c45c075796.png
 components:
   - BuyButton.tsx
 ---
 
-BuyButton intends to send the user to the checkout/cart step directly.
+A buy button intends to send the user to the checkout/cart step directly.
 
 ## Overview
 
