--- a/docs/faststore/components/molecules/input-field.mdx
+++ b/docs/faststore/components/molecules/input-field.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Input Field"
-excerpt: InputFields are text fields used to get user inputs.
+title: "InputField"
+excerpt: Text fields used to get user inputs.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Input___77d0e7a8079b7d310e8223dd9e1994f6.png
 ---
 
-Input Field wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+InputField wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 ## Overview
 
