--- a/docs/faststore/components/molecules/order-summary.mdx
+++ b/docs/faststore/components/molecules/order-summary.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Order Summary"
-excerpt: This component provide a summary of the items in the cart, including the total price, related shipping tax, and discounts.
+title: "OrderSummary"
+excerpt: This component provides a summary of the items in the cart, including the total price, related shipping tax, and discounts.
 keywords:
   - UI library
   - ecommerce
