--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Product Card"
-excerpt: ProductCard displays summarized information about a product.
+title: "ProductCard"
+excerpt: Displays summarized information about a product.
 keywords:
   - UI library
   - ecommerce
@@ -13,7 +13,7 @@ components:
   - ProductCardContent.tsx
 ---
 
-Displays summarized information about a product. They usually present a call-to-action button, as well as the product's name, price, and image.The `ProductCard` is a compound of the following:
+A Product Card displays summarized information about a product. They usually present a call-to-action button, as well as the product's name, price, and image.The `ProductCard` is a compound of the following:
 
 - `ProductCardImage`: wraps the product's image.
 - `ProductCardContent`: wraps the content's details.
