--- a/docs/faststore/components/molecules/product-price.mdx
+++ b/docs/faststore/components/molecules/product-price.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ProductPrice"
-excerpt: ProductPrice displays the product's listing and spot price.
+excerpt: Displays the product's listing and spot price.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/product-price___90342b9516448a71008988620e629225.png
 components:
