--- a/docs/faststore/components/molecules/product-title.mdx
+++ b/docs/faststore/components/molecules/product-title.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Product Title"
-excerpt: The Product Title is commonly used on Product Details Page (PDP).
+title: "ProductTitle"
+excerpt: Commonly used on Product Details Page (PDP), it wraps the product name, a product label and the rating.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Checkbox___5dfb3d931c093ee7ebfac8bc388e68b5.png
 components:
