Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -68,15 +68,15 @@ This section lists all the recent deploys to your production store. Each item on
 
 ### Build logs
 
-The Dashboard integrates the build logs feature, providing an integrated experience of your store deployment for monitoring the store deployment status, and help you understand the success or failure of each deployment.
+The Dashboard includes the Build Logs section, which offers insights into your store's deployments. This feature allows you to monitor the status of each deployment and verify whether it succeeded or failed.
 
 ![webops-build-logs](https://vtexhelp.vtexassets.com/assets/docs/src/webops-build-logs___dcab2fcebc09675e9087f3d25ca33058.gif)
 
-To access the build logs for each deployment, follow these steps:
+To access the build logs for a specific deployment, follow these steps:
 
-1. Go to [Production Deploys](#production-deploys) and click in one of the the deploys you want to see the build information.
+1. Go to the [Production Deploys](#production-deploys) section of the WebOps page.
 2. Click on a specific deployment to view its details.
-3. The build logs view will display deployment information, including a `Preview Link` to see a preview of your store for that deployment.
+3. The Build Logs will appear on the right-hand side of the screen, displaying deployment details, such as a Preview Link to a live preview of your store for that specific deployment.
 
 ### Preview Deploys
 
