--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -76,7 +76,7 @@ To access the build logs for a specific deployment, follow these steps:
 
 1. Go to the [Production Deploys](#production-deploys) section of the WebOps page.
 2. Click on a specific deployment to view its details.
-3. The Build Logs will appear on the right-hand side of the screen, displaying deployment details, such as a Preview Link to a live preview of your store for that specific deployment.
+3. The Build Logs will appear on the right-hand side of the screen, displaying deployment details, such as a `Preview Link` to a live preview of your store for that specific deployment.
 
 ### Preview Deploys
 
