--- a/docs/faststore/docs/go-live/overview.mdx
+++ b/docs/faststore/docs/go-live/overview.mdx
@@ -26,8 +26,6 @@ To ensure that you have set up all configurations for your store to run smoothly
 
 ### Storefront development
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Checking the account edition" id="checkboxfield-account" />
 <details>
 <summary>Ensure that your account edition is set to `vtex.edition-store@5.x` Edition app in your master workspace.</summary>
@@ -47,8 +45,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </tbody>
 </table>
 </details>
-</li>
-<li>
+
 <CheckboxField label="Deploying with FastStore Onboarding" id="checkboxfield-onboarding" />
 <details>
 <summary>Deploy your project using the FastStore Onboarding app.</summary>
@@ -68,8 +65,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </tbody>
 </table>
 </details>
-</li>
-<li>
+
 <CheckboxField label="Setting up the project" id="checkboxfield-setting-up" />
 <details>
 <summary>Set up and develop your Storefront.</summary>
@@ -90,13 +86,9 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
-</ul>
 
 ### VTEX integration
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Setting up a VTEX account" id="checkboxfield-account" />
 <details>
 <summary>Set up your VTEX environment and install all the necessary apps.</summary>
@@ -117,9 +109,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
 
-<li>
 <CheckboxField label="Configuring external DNS for a custom domain" id="checkboxfield-dns" />
 <details>
 <summary>Configure your website's domain and subdomain.</summary>
@@ -140,9 +130,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
 
-<li>
 <CheckboxField label="Integrating the VTEX Login" id="checkboxfield-login" />
 <details>
 <summary>Integrate the VTEX Login with your FastStore project.</summary>
@@ -163,9 +151,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
 
-<li>
 <CheckboxField label="Integrating the VTEX Checkout" id="checkboxfield-checkout" />
 <details>
 <summary>Adjust the header by replacing the links to the Checkout and MyAccount pages with the proper paths.</summary>
@@ -186,9 +172,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
 
-<li>
 <CheckboxField label="Integrating the VTEX Order Placed and My Account" id="checkboxfield-my-account" />
 <details>
 <summary>Clone, edit, and install the [faststore-vtex-integrations](https://github.com/vtex/faststore-vtex-integrations/) app on your VTEX account.</summary>
@@ -208,22 +192,16 @@ To ensure that you have set up all configurations for your store to run smoothly
 </tbody>
 </table>
 </details>
-</li>
 
-<li>
 <CheckboxField label="Checking the pages in the secure domain" id="checkboxfield-domain" />
 <details>
 <summary>Test your website links to pages being rendered in the secure subdomain, such as the Login, Checkout, My Account, and Order Placed pages.</summary>
 
 **Management**: Agency
 </details>
-</li>
-</ul>
 
 ### Headless customization
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Integrating the storefront with VTEX Headless CMS" id="checkboxfield-cms" />
 <details>
 <summary>Set up the preview flow between the storefront and the Headless CMS</summary>
@@ -244,52 +222,39 @@ To ensure that you have set up all configurations for your store to run smoothly
 </table>
 
 </details>
-</li>
-</ul>
 
 ### SSL Configuration
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Checking the pages SSL certificate" id="checkboxfield-ssl" />
 <details>
 <summary>Check if all pages of your store have the correct SSL certificate configured.</summary>
 
 **Management:** Agency
 </details>
-</li>
-</ul>
 
 ### Testing and performance
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Performing Lighthouse audits" id="checkboxfield-lh" />
 <details>
 <summary>Run Lighthouse audits on your store's pages to guarantee you are going live with great performance</summary>
 
 **Management:** Agency
 <ul>
-<li>- Run Lighthouse audits on your store's Home Page, Product Listing Page (PLP), Product Details Page (PDP), and custom pages.</li>
-<li>- All pages must have Lighthouse Score equal or more than 60 on mobile devices.</li>
-<li>- Any publication will be automatically blocked by the system until all checks pass.</li>
+<li>Run Lighthouse audits on your store's Home Page, Product Listing Page (PLP), Product Details Page (PDP), and custom pages.</li>
+<li>All pages must have Lighthouse Score equal or more than 60 on mobile devices.</li>
+<li>Any publication will be automatically blocked by the system until all checks pass.</li>
 </ul>
 </details>
-</li>
-<li>
+
 <CheckboxField label="Setting up Traffic Splitting" id="checkboxfield-traffic" />
 <details>
 <summary>If you already have a live store, configure traffic splitting to validate which version of your website is the best for your business needs.</summary>
 
 **Management:** VTEX Support
 </details>
-</li>
-</ul>
 
 ### Analytics
 
-<ul class="nx-section-checklist">
-<li>
 <CheckboxField label="Managing the Analytics module" id="checkboxfield-analytics" />
 <details>
 <summary>Make sure that all analytics events and data are accurately being send to Google Analytics.</summary>
@@ -309,8 +274,6 @@ To ensure that you have set up all configurations for your store to run smoothly
 </tbody>
 </table>
 </details>
-</li>
-</ul>
 
 ---
 
