--- a/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
+++ b/docs/faststore/docs/routing/managing-urls-with-redirects-and-rewrite-paths.mdx
@@ -20,6 +20,7 @@ These two tools enhance content organization, help maintain a good user experien
 FastStore provides a way to configure redirects through the [`faststore.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) file. This configuration is based on the [Next.js redirects](https://nextjs.org/docs/pages/api-reference/next-config-js/redirects).
 
 > ⚠️For projects hosted on Vercel there are redirect limits such as the following: Number of redirects in the array: 1.024 maximum. String length for `source` and `destination` parameters: 4.096 maximum. For more information access the Vercel [Redirects](https://vercel.com/docs/edge-network/redirects#configuration) article.
+
 1. Open your FastStore project in your preferred code editor and go to the `faststore.config.js` file within your project directory.
 2. Inside the `faststore.config.js`, add the `redirects`  function. This function will define your redirect rules, for example:
 
@@ -34,8 +35,7 @@ FastStore provides a way to configure redirects through the [`faststore.config.j
 
     > ℹ️ The `redirects` function requires the `required.json` file, which you will create in the next step. This file holds the redirect definitions.
 
-3. Go to the `src` folder and create the `redirects.json` file.
-Inside the `redirects.json` file, add the following:
+3. Go to the `src` folder and create the `redirects.json` file. Inside the `redirects.json` file, add the following:
 
     ```src/redirects.json
     [
@@ -60,4 +60,6 @@ Inside the `redirects.json` file, add the following:
 
 ## Creating rewrites
 
-FastStore leverages [Next.js rewrites](https://nextjs.org/docs/pages/api-reference/next-config-js/rewrites) to create custom routes while using existing Product Listing Page (PLP) templates. This allows you to map specific URLs to templates defined in your Headless CMS, providing flexibility in content organization and URL structure. For more information on using rewrites with PLP templates, see the [Using Rewrites with PLP template](https://developers.vtex.com/docs/guides/faststore/headless-cms-multiple-page-template#product-listing-page-plp-template-selection-criteria ) section on the Multiple page template documentation.
+FastStore leverages [Next.js rewrites](https://nextjs.org/docs/pages/api-reference/next-config-js/rewrites) to create custom routes while using existing Product Listing Page (PLP) templates. This allows you to map specific URLs to templates defined in your Headless CMS, providing flexibility in content organization and URL structure. 
+
+For more information on using rewrites with PLP templates, see the [Using Rewrites with PLP template](https://developers.vtex.com/docs/guides/faststore/headless-cms-multiple-page-template#product-listing-page-plp-template-selection-criteria) section on the Multiple page template documentation.
