frontmatter: hide the documentation

--- a/docs/faststore/components/getting-started.mdx
+++ b/docs/faststore/components/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Getting started with FastStore UI"
+hidden: true
 ---
 
 > ⚠️ If your store project is built with [FastStore](https://developers.vtex.com/docs/guides/faststore), you don't need to follow the steps in this guide to install the FastStore UI. FastStore projects include by default FastStore UI components.
