Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/getting-started.mdx
+++ b/docs/faststore/components/getting-started.mdx
@@ -27,12 +27,12 @@ npm install @faststore/ui
 
 ---
 
-## Adding styles
+## Applying Styles to FastStore UI components
 
-There are two ways to style FastStore UI components:
+There are two main scenarios where you may want to apply styles to FastStore UI components:
 
-- [Overriding a component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component): Customize a native component.
-- [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section): Build a new section for the Headless CMS.
+- [Overriding a component](https://developers.vtex.com/docs/guides/faststore/overrides-native-component): Customize the appearance of an existing component.
+- [Creating a new section](https://developers.vtex.com/docs/guides/faststore/building-sections-creating-a-new-section): Style a new UI section.
 
 In both scenarios, you'll create a stylesheet for your component and import the necessary styles. For more details on creating a stylesheet and importing styles, refer to the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
