--- a/docs/faststore/components/molecules/radio-field.mdx
+++ b/docs/faststore/components/molecules/radio-field.mdx
@@ -1,6 +1,6 @@
 ---
 title: "RadioField"
-excerpt: "Groups a Radio input and its corresponding Label."
+excerpt: Groups a Radio input and its corresponding Label.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/RadioLabel___b3fc3b7a139796e4921349df5aaa270c.png
 components:
