--- a/docs/faststore/components/molecules/radio-group.mdx
+++ b/docs/faststore/components/molecules/radio-group.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Radio Group"
-excerpt: RadioGroup allows users to select a single option from a list of two or more mutually exclusive options.
+title: "RadioGroup"
+excerpt: Allows users to select a single option from a list of two or more mutually exclusive options.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/RadioGroup___a09afdd36ab1bcf64ad0c8fa87ee8dd0.png
 ---
 
-Radio Group allows users to select a single option from a list of two or more mutually exclusive options.
+The `RadioGroup` allows users to select a single option from a list of two or more mutually exclusive options.
 
 ## Overview
 
