Fix Rating excerpt

--- a/docs/faststore/components/molecules/rating.mdx
+++ b/docs/faststore/components/molecules/rating.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Rating"
-excerpt: Rating displays a product rating based on other shoppers' feedback.
+excerpt: Displays a product rating based on other shoppers' feedback.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/AggregateRating___a8300916874f5a11de7633b7cabc12e9.png
 components:
