--- a/docs/faststore/components/molecules/region-bar.mdx
+++ b/docs/faststore/components/molecules/region-bar.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Region Bar"
-excerpt: The RegionBar is a custom Button, usually used on mobile devices only. It should trigger the RegionModal.
+title: "RegionBar"
+excerpt: Acts as a custom Button, usually used on mobile devices only. It should trigger the `RegionModal`.
 keywords:
   - UI library
   - ecommerce
@@ -11,7 +11,7 @@ components:
   - RegionBar.tsx
 ---
 
-The RegionBar is a custom Button, usually used on mobile devices only. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
+The `RegionBar` is a custom Button, usually used on mobile devices only. It should trigger the [RegionModal](https://developers.vtex.com/docs/guides/faststore/organisms-region-modal).
 
 The component is part of [Regionalization](https://developers.vtex.com/docs/guides/faststore/feature-regionalization) feature.
 
