--- a/docs/faststore/components/molecules/search-dropdown.mdx
+++ b/docs/faststore/components/molecules/search-dropdown.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Search Dropdown"
-excerpt: Combine `SearchHistory`, `SearchTop` and `SearchAutoComplete` and `SearchProducts` to show all options in `SearchInput`.
+title: "SearchDropdown"
+excerpt: Combines `SearchHistory`, `SearchTop` and `SearchAutoComplete` and `SearchProducts` to show all options in `SearchInput`.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/AggregateRating___a8300916874f5a11de7633b7cabc12e9.png
 components:
