--- a/docs/faststore/components/molecules/search-history.mdx
+++ b/docs/faststore/components/molecules/search-history.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Search History"
-excerpt: Responsible for showing the latest terms searched by a user.
+title: "SearchHistory"
+excerpt: Shows the latest terms searched by a user.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/AggregateRating___a8300916874f5a11de7633b7cabc12e9.png
 components:
@@ -51,11 +51,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-### Search History
+### SearchHistory
 
 <ComponentPropsSection component="SearchHistory" />
 
-### Search History Term
+### SearchHistoryTerm
 
 <ComponentPropsSection component="SearchHistoryTerm" />
 
