--- a/docs/faststore/components/molecules/search-products.mdx
+++ b/docs/faststore/components/molecules/search-products.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Search Products"
+title: "SearchProducts"
 excerpt: List of `SearchProductItem` to show details of the suggested products.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Select___8842f3b6522c3e8db0a887b3f216a6ab.png
@@ -128,19 +128,19 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 All search product related components support all attributes also supported by their respective HTML tags. Besides those attributes, the following props are also supported:
 
-### Search Products
+### SearchProducts
 
 <ComponentPropsSection component="SearchProducts" />
 
-### Search Product Item
+### SearchProductItem
 
 <ComponentPropsSection component="SearchProductItem" />
 
-### Search Product Item Image
+### SearchProductItemImage
 
 <ComponentPropsSection component="SearchProductItemImage" />
 
-### Search Product Item Content
+### SearchProductItemContent
 
 <ComponentPropsSection component="SearchProductItemContent" />
 
