--- a/docs/faststore/components/molecules/search-top.mdx
+++ b/docs/faststore/components/molecules/search-top.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Search Top"
-excerpt: This section displays the most searched terms by customers.
+title: "SearchTop"
+excerpt: Displays the most searched terms by customers.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/AggregateRating___a8300916874f5a11de7633b7cabc12e9.png
 components:
@@ -59,11 +59,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-### Search Top
+### SearchTop
 
 <ComponentPropsSection component="SearchTop" />
 
-### Search Top Term
+### SearchTopTerm
 
 <ComponentPropsSection component="SearchTopTerm" />
 
