--- a/docs/faststore/components/molecules/select-field.mdx
+++ b/docs/faststore/components/molecules/select-field.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Select Field"
-excerpt: SelectField grouped a Select input and its corresponding Label.
+title: "SelectField"
+excerpt: Groups a Select input and its corresponding Label.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Select___8842f3b6522c3e8db0a887b3f216a6ab.png
 components:
   - SelectField.tsx
 ---
 
-Select Field wraps a [Select](https://developers.vtex.com/docs/guides/faststore/atoms-select) input and its corresponding [Label](/componentes/atoms/label). It allows users to select one option from a set.
+The `SelectField` component wraps a [Select](https://developers.vtex.com/docs/guides/faststore/atoms-select) input and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label). It allows users to select one option from a set.
 
 ## Overview
 
