--- a/docs/faststore/components/molecules/sku-selector.mdx
+++ b/docs/faststore/components/molecules/sku-selector.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Sku Selector"
-excerpt: The `SkuSelector` component is mainly used in Product Details Pages (PDPs) to display all the available variants for a given product.
+title: "SkuSelector"
+excerpt: Displays all the available variants for a given product. The `SkuSelector` component is mainly used in Product Details Pages (PDPs).
 keywords:
   - UI library
   - ecommerce
