--- a/docs/faststore/components/molecules/table.mdx
+++ b/docs/faststore/components/molecules/table.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Table"
-excerpt: Tables display information in a friendly way, allowing users to scan for details quickly.
+excerpt: Displays information in a friendly way, allowing users to scan for details quickly.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Table___06dbb666025a4d64540fb91d22b54ba6.png
 components:
