--- a/docs/faststore/components/molecules/tag.mdx
+++ b/docs/faststore/components/molecules/tag.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Badge___bcedffeb307527c1606be224a7fb5ac1.png
 ---
 
-Tags are an interactive `Badge`. By default, its have a close button.
+The `Tag` component is an interactive `Badge`. By default, its have a close button.
 
 ## Overview
 
