--- a/docs/faststore/components/molecules/accordion.mdx
+++ b/docs/faststore/components/molecules/accordion.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Accordion"
-excerpt: Accordions display an expandable/collapsible list of items.
+excerpt: Displays an expandable/collapsible list of items.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Accordion___66012e5367e86c5b4422ff8d6974b8cd.png
 components:
@@ -9,7 +9,7 @@ components:
   - AccordionPanel.tsx
 ---
 
-Accordions display an expandable/collapsible list of items. The final Accordion component is a compound of the following:- `Accordion`: wraps a series of `AccordionItem`s in a single component.
+The `Accordion` displays an expandable/collapsible list of items. The final Accordion component is a compound of the following:- `Accordion`: wraps a series of `AccordionItem`s in a single component.
 
 - `AccordionItem`: wraps an `AccordionButton` and an `AccordionPanel`.
 - `AccordionButton`: contains the top-level items of the Accordion list. It is a clickable button that shows or hides the child items of a given `AccordionItem`.
@@ -97,15 +97,15 @@ Besides those attributes, the following props are also supported:
 
 <ComponentPropsSection component="Accordion" />
 
-### Accordion Item
+### AccordionItem
 
 <PropsSection propsList={propsAccordionItem} />
 
-### Accordion Button
+### AccordionButton
 
 <ComponentPropsSection component="AccordionButton" />
 
-### Accordion Panel
+### AccordionPanel
 
 <ComponentPropsSection component="AccordionPanel" />
 
