--- a/docs/faststore/components/molecules/alert.mdx
+++ b/docs/faststore/components/molecules/alert.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Alert"
-excerpt: Alerts display short messages related to the behavior of a system, feature, or page.
+excerpt: Displays short messages related to the behavior of a system, feature, or page.
 components:
   - Alert.tsx
 ---
