--- a/docs/faststore/components/molecules/breadcrumb.mdx
+++ b/docs/faststore/components/molecules/breadcrumb.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Breadcrumb"
-excerpt: Breadcrumbs indicate the user's location in a website hierarchy.
+excerpt: Indicates the user's location in a website hierarchy.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Breadcrumb___20a8572e919e1262c1405a5e80009e25.png
 components:
