--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Card"
-excerpt: A card with a header and body, ideal for displaying products, messages, or store information.
+excerpt: Displays products, messages, or store information.
 components:
   - Card.tsx
 sidebar_custom_props:
