--- a/docs/faststore/components/molecules/carousel.mdx
+++ b/docs/faststore/components/molecules/carousel.mdx
@@ -1,13 +1,13 @@
 ---
 title: 'Carousel'
-excerpt: The Carousel slides through multiple elements using custom controls.
+excerpt: Slides through multiple elements using custom controls.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/ProductCardComponent___e6502d57cf7e5bf247f86b64577d4141.png
 components:
   - Carousel.tsx
 ---
 
-Slides through multiple elements using custom controls.
+The `Carousel` component slides through multiple elements using custom controls.
 
 ## Import
 
