--- a/docs/faststore/components/molecules/cart-item.mdx
+++ b/docs/faststore/components/molecules/cart-item.mdx
@@ -1,6 +1,6 @@
 ---
 title: "CartItem"
-excerpt: Cart Items are used to present the summarized information of a product inside the Cart.
+excerpt: Displays the summarized information of a product inside the Cart.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Button___6d6b16886d5d7e2a05dba8c45c075796.png
 components:
