Reviewing excerpts and introduction for each component

--- a/docs/faststore/components/molecules/gift.mdx
+++ b/docs/faststore/components/molecules/gift.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Gift"
-excerpt: It displays an additional item to purchase as a gift.
+excerpt: Displays an additional item to purchase as a gift.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/ProductCardComponent___e6502d57cf7e5bf247f86b64577d4141.png
 components:
@@ -9,7 +9,7 @@ components:
   - GiftContent.tsx
 ---
 
-The Gift component is a compound of the following:
+The `Gift` component is a compound of the following:
 
 - `Gift`: renders a `<div>` as wrapper with an `Icon`, `GiftImage`, and `GiftContent`.
 - `GiftImage`: renders a `<div>` as wrapper with an `Image`.
