--- a/docs/faststore/components/molecules/discount-badge.mdx
+++ b/docs/faststore/components/molecules/discount-badge.mdx
@@ -1,11 +1,13 @@
 ---
 title: "DiscountBadge"
-excerpt: A custom Badge that display product's discounts.
+excerpt: Displays product's discounts.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Badge___bcedffeb307527c1606be224a7fb5ac1.png
 components:
   - DiscountBadge.tsx
 ---
+
+The `DiscountBadge` displays product's discounts.
 
 ## Overview
 
