--- a/docs/faststore/components/molecules/dropdown.mdx
+++ b/docs/faststore/components/molecules/dropdown.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Dropdown"
-excerpt: Dropdowns are used to reveal a list of options or commands.
+excerpt: Shows a list of options or commands.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Dropdown___1d904311eb18facba54340e76b109d62.png
 components:
@@ -10,7 +10,7 @@ components:
   - DropdownButton.tsx
 ---
 
-Displays a set of actions/items to the user, usually used to show a menu of options.
+The `Dropdown` component Displays a set of actions/items to the user, usually used to show a menu of options.
 
 ## Overview
 
