--- a/docs/faststore/components/molecules/input-field.mdx
+++ b/docs/faststore/components/molecules/input-field.mdx
@@ -5,7 +5,7 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Input___77d0e7a8079b7d310e8223dd9e1994f6.png
 ---
 
-InputField wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+The `InputField` is a text field component to get user inputs. The component wraps an [Input](https://developers.vtex.com/docs/guides/faststore/atoms-input) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 ## Overview
 
