Reviewing excerpts and introduction

--- a/docs/faststore/components/molecules/navbar-links.mdx
+++ b/docs/faststore/components/molecules/navbar-links.mdx
@@ -5,7 +5,7 @@ components:
   - NavbarLinks.tsx
 ---
 
-A wrapper used to display a set of navigation links that self adapts on mobile or desktop screens.
+The `NavbarLinks` component displays a set of navigation links that self adapts on mobile or desktop screens.
 
 This component is part of the [Navigation](https://developers.vtex.com/docs/guides/faststore/feature-navigation) feature and must be used in the [Navbar](https://developers.vtex.com/docs/guides/faststore/organisms-navbar) context.
 
