--- a/docs/faststore/components/molecules/link-button.mdx
+++ b/docs/faststore/components/molecules/link-button.mdx
@@ -1,11 +1,11 @@
 ---
 title: "LinkButton"
-excerpt: A Link Button is similar to a button, however acts as a link to navigate users between pages.
+excerpt: Acts as a link to navigate users between pages.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Button___6d6b16886d5d7e2a05dba8c45c075796.png
 ---
 
-A Link Button is similar to a button, however acts as a link to navigate users between pages.
+The `LinkButton` component is similar to a button, however acts as a link to navigate users between pages.
 
 ## Overview
 
