--- a/docs/faststore/components/molecules/modal.mdx
+++ b/docs/faststore/components/molecules/modal.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Modal"
-excerpt: Modals are dialog windows that sit on top of an application's main view.
+excerpt: Dialog windows that sit on top of an application's main view.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Modal___16993b8e327f3571529d7ee4e97cb45b.png
 components:
@@ -9,7 +9,7 @@ components:
   - ModalBody.tsx
 ---
 
-Modals are dialog windows that sit on top of an application's main view.
+The `Modal` is a dialog windows that sit on top of an application's main view.
 
 The `Modal` component is a compound of the following:
 
