--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -13,7 +13,7 @@ components:
   - ProductCardContent.tsx
 ---
 
-A Product Card displays summarized information about a product. They usually present a call-to-action button, as well as the product's name, price, and image.The `ProductCard` is a compound of the following:
+The `ProductCard` displays summarized information about a product. They usually present a call-to-action button, as well as the product's name, price, and image.The `ProductCard` is a compound of the following:
 
 - `ProductCardImage`: wraps the product's image.
 - `ProductCardContent`: wraps the content's details.
@@ -239,15 +239,15 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 All product card related components support all attributes also supported by their respective HTML tags. Besides those attributes, the following props are also supported:
 
-### Product Card
+### ProductCard
 
 <ComponentPropsSection component="ProductCard" />
 
-### Product Card Image
+### ProductCardImage
 
 <ComponentPropsSection component="ProductCardImage" />
 
-### Product Card Content
+### ProductCardContent
 
 <ComponentPropsSection component="ProductCardContent" />
 
