--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -475,7 +475,7 @@ Check the available Headless CMS schema that you can customize for this componen
               "default": "score_desc",
               "enumNames": [
                 "Price, descending",
-                ", ascending",
+                "Price, ascending",
                 "Top sales",
                 "Name, A-Z",
                 "Name, Z-A",
